[gd_scene load_steps=4 format=3 uid="uid://lfv6cpmbq331"]

[ext_resource type="Script" path="res://scenes/main_game/powerup_button.gd" id="1_d436u"]
[ext_resource type="Texture2D" uid="uid://c3goc4l0ti4vj" path="res://assets/sprites/tile-red.png" id="2_q8ln7"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_tfqej"]
size = Vector2(64, 64)

[node name="PowerupButton" type="Node2D"]
script = ExtResource("1_d436u")
current_value = 70
button_texture = ExtResource("2_q8ln7")

[node name="GrayBackground" type="Sprite2D" parent="."]
modulate = Color(0.310617, 0.310617, 0.310617, 1)
texture = ExtResource("2_q8ln7")
centered = false

[node name="ButtonProgressMask" type="Sprite2D" parent="."]
clip_children = 1
texture = SubResource("PlaceholderTexture2D_tfqej")
centered = false
offset = Vector2(0, 19.2)
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="TextureButton" type="TextureButton" parent="ButtonProgressMask"]
offset_right = 64.0
offset_bottom = 64.0
disabled = true
texture_normal = ExtResource("2_q8ln7")

[connection signal="pressed" from="ButtonProgressMask/TextureButton" to="." method="_on_texture_button_pressed"]
